--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
         </div>
 
         <div class="middle footer__div">
-            <a href=""><img class="social__media--img" src="../images/facebook.png" alt="facebook logo"></a>
-            <a href=""><img class="social__media--img" src="../images/twitter.png" alt="twitter logo"></a>
+            <a href=""><img class="social__media--img" src="./images/facebook.png" alt="facebook logo"></a>
+            <a href=""><img class="social__media--img" src="./images/twitter.png" alt="twitter logo"></a>
             <!-- <a href=""><img src="" alt="facebook"></a>
             <a href=""><img src="" alt="facebook"></a> -->
         </div>
