--- a/html/contact.html
+++ b/html/contact.html
@@ -17,7 +17,7 @@
     <main class="main">
         <nav class="nav__link">
             <ul>
-                <li><a class="nav_link" href="/index.html">Home</a></li>
+                <li><a class="nav_link" href="../index.html">Home</a></li>
                 <li><a class="nav_link" href="./about.html">About</a></li>
                 <li><a class="nav_link" href="./relevant.html">Relevant</a></li>
                 <li><a class="nav_link" href="./portfolio.html">Portfolio</a></li>
